[gd_scene load_steps=12 format=4 uid="uid://c40qc8gq3f3g3"]

[ext_resource type="TileSet" uid="uid://t4y6n2r0b5hr" path="res://tiles/walls.tres" id="1_2jm27"]
[ext_resource type="Script" path="res://scripts/day/room_3.gd" id="1_5pkuw"]
[ext_resource type="Texture2D" uid="uid://jax6ijn0o3i3" path="res://assets/sprites/day/new_room/1.png" id="2_1fs00"]
[ext_resource type="Script" path="res://scripts/day/door_1.gd" id="4_2rac8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hfwrs"]
atlas = ExtResource("2_1fs00")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8pdc"]
atlas = ExtResource("2_1fs00")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmg7g"]
atlas = ExtResource("2_1fs00")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwy0v"]
atlas = ExtResource("2_1fs00")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crm4i"]
atlas = ExtResource("2_1fs00")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0kqa"]
atlas = ExtResource("2_1fs00")
region = Rect2(160, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_jvqbq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfwrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8pdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmg7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwy0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crm4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0kqa")
}],
"loop": false,
"name": &"open",
"speed": 6.0
}]

[node name="Room3" type="Node2D"]
script = ExtResource("1_5pkuw")

[node name="wall" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAEAAAAAAAAAAEAAAAEAAEAAAAAAAIAAAAEAAEAAAAAAAMAAAAEAAEAAAAAAAQAAAAEAAEAAAAAAAUAAAAEAAEAAAAAAAYAAAAEAAEAAAAAAAcAAAAEAAEAAAAAAAgAAAAEAAEAAAAAAAkAAAAEAAEAAAAAAAoAAAAEAAEAAAAAAAsAAAAEAAEAAAAAAAwAAAAEAAEAAAAAAA0AAAAEAAEAAAAAAA4AAAAEAAEAAAAAAA8AAAAEAAEAAAAAABAAAAAEAAIAAAABABAAAAAFAAIAAAACABAAAAAFAAIAAAADABAAAAAFAAIAAAAEABAAAAAFAAIAAAAFABAAAAAFAAIAAAAGABAAAAAFAAIAAAAHABAAAAAFAAIAAAAIABAAAAAFAAIAAAAJABAAAAAFAAIAAAAKABAAAAAFAAIAAAALABAAAAAFAAIAAAAMABAAAAAFAAIAAAANABAAAAAFAAIAAAAOABAAAAAFAAIAAAAPABAAAAAFAAIAAAAQABAAAAAFAAIAAAARABAAAAAFAAIAAAASABAAAAAFAAIAAAATABAAAAAFAAIAAAAUABAAAAAFAAIAAAAVABAAAAAFAAIAAAAWABAAAAAFAAIAAAAXABAAAAAFAAIAAAAYABAAAAAFAAIAAAAZABAAAAAFAAIAAAAaABAAAAAFAAIAAAAbABAAAAAFAAIAAAAcABAAAAAFAAIAAAAdABAAAAAGAAIAAAAdAA8AAAAGAAEAAAAdAAgAAAAMAAIAAAAdAAcAAAAGAAEAAAAdAAYAAAAGAAEAAAAdAAUAAAAGAAEAAAAdAAQAAAAGAAEAAAAdAAMAAAAGAAEAAAAdAAIAAAAGAAEAAAAdAAEAAAAGAAEAAAAdAAAAAAAGAAAAAAABAAAAAAAFAAAAAAACAAAAAAAFAAAAAAADAAAAAAAFAAAAAAAEAAAAAAAFAAAAAAAFAAAAAAAFAAAAAAAGAAAAAAAFAAAAAAAHAAAAAAAFAAAAAAAIAAAAAAAFAAAAAAAJAAAAAAAFAAAAAAAKAAAAAAAFAAAAAAALAAAAAAAFAAAAAAAMAAAAAAAFAAAAAAANAAAAAAAFAAAAAAAOAAAAAAAFAAAAAAAPAAAAAAAFAAAAAAAQAAAAAAAFAAAAAAARAAAAAAAFAAAAAAASAAAAAAAFAAAAAAATAAAAAAAFAAAAAAAUAAAAAAAFAAAAAAAVAAAAAAAFAAAAAAAWAAAAAAAFAAAAAAAXAAAAAAAFAAAAAAAYAAAAAAAFAAAAAAAZAAAAAAAFAAAAAAAaAAAAAAAFAAAAAAAbAAAAAAAFAAAAAAAcAAAAAAAFAAAAAAABAAcAAAAAAAYAAAACAAcAAAABAAYAAAADAAcAAAAAAAYAAAAEAAcAAAABAAYAAAAFAAcAAAAAAAYAAAAGAAcAAAABAAYAAAAHAAcAAAAAAAYAAAAIAAcAAAABAAYAAAAJAAcAAAAAAAYAAAAKAAcAAAABAAYAAAALAAcAAAAAAAYAAAAMAAcAAAABAAYAAAANAAcAAAAAAAYAAAAOAAcAAAABAAYAAAAPAAcAAAAAAAYAAAAQAAcAAAABAAYAAAARAAcAAAAAAAYAAAASAAcAAAABAAYAAAATAAcAAAAAAAYAAAAUAAcAAAABAAYAAAAVAAcAAAAAAAYAAAAWAAcAAAABAAYAAAAXAAcAAAAAAAYAAAAYAAcAAAABAAYAAAAZAAcAAAAAAAYAAAAaAAcAAAABAAYAAAAbAAcAAAAAAAYAAAAcAAcAAAABAAYAAAABAAYAAAAAAAUAAAACAAYAAAAAAAUAAAADAAYAAAAAAAUAAAAEAAYAAAAAAAUAAAAFAAYAAAAAAAUAAAAGAAYAAAAAAAUAAAAHAAYAAAAAAAUAAAAIAAYAAAAAAAUAAAAJAAYAAAAAAAUAAAAKAAYAAAAAAAUAAAALAAYAAAAAAAUAAAAMAAYAAAAAAAUAAAANAAYAAAAAAAUAAAAOAAYAAAAAAAUAAAAPAAYAAAAAAAUAAAAQAAYAAAAAAAUAAAARAAYAAAAAAAUAAAASAAYAAAAAAAUAAAATAAYAAAAAAAUAAAAUAAYAAAAAAAUAAAAVAAYAAAAAAAUAAAAWAAYAAAAAAAUAAAAXAAYAAAAAAAUAAAAYAAYAAAAAAAUAAAAZAAYAAAAAAAUAAAAaAAYAAAAAAAUAAAAbAAYAAAAAAAUAAAAcAAYAAAACAAUAAAABAAEAAAAAAAMAAAACAAEAAAAAAAMAAAADAAEAAAAAAAMAAAAEAAEAAAAAAAMAAAAFAAEAAAAAAAMAAAAGAAEAAAAAAAMAAAAHAAEAAAAAAAMAAAAIAAEAAAAAAAMAAAAJAAEAAAAAAAMAAAAKAAEAAAAAAAMAAAALAAEAAAAAAAMAAAAMAAEAAAAAAAMAAAANAAEAAAAAAAMAAAAOAAEAAAAAAAMAAAAPAAEAAAAAAAMAAAAQAAEAAAAAAAMAAAARAAEAAAAAAAMAAAASAAEAAAAAAAMAAAATAAEAAAAAAAMAAAAUAAEAAAAAAAMAAAAVAAEAAAAAAAMAAAAWAAEAAAAAAAMAAAAXAAEAAAAAAAMAAAAYAAEAAAAAAAMAAAAZAAEAAAAAAAMAAAAaAAEAAAAAAAMAAAAbAAEAAAAAAAMAAAAcAAEAAAACAAMAAAABAAIAAAAAAAQAAAABAAMAAAAAAAQAAAABAAQAAAAAAAQAAAABAAUAAAAAAAQAAAACAAIAAAAAAAQAAAACAAMAAAAAAAQAAAACAAQAAAAAAAQAAAACAAUAAAAAAAQAAAADAAIAAAAAAAQAAAADAAMAAAAAAAQAAAADAAQAAAAAAAQAAAADAAUAAAAAAAQAAAAEAAIAAAAAAAQAAAAEAAMAAAAAAAQAAAAEAAQAAAAAAAQAAAAEAAUAAAAAAAQAAAAFAAIAAAAAAAQAAAAFAAMAAAAAAAQAAAAFAAQAAAAAAAQAAAAFAAUAAAAAAAQAAAAGAAIAAAAAAAQAAAAGAAMAAAAAAAQAAAAGAAQAAAAAAAQAAAAGAAUAAAAAAAQAAAAHAAIAAAAAAAQAAAAHAAMAAAAAAAQAAAAHAAQAAAAAAAQAAAAHAAUAAAAAAAQAAAAIAAIAAAAAAAQAAAAIAAMAAAAAAAQAAAAIAAQAAAAAAAQAAAAIAAUAAAAAAAQAAAAJAAIAAAAAAAQAAAAJAAMAAAAAAAQAAAAJAAQAAAAAAAQAAAAJAAUAAAAAAAQAAAAKAAIAAAAAAAQAAAAKAAMAAAAAAAQAAAAKAAQAAAAAAAQAAAAKAAUAAAAAAAQAAAALAAIAAAAAAAQAAAALAAMAAAAAAAQAAAALAAQAAAAAAAQAAAALAAUAAAAAAAQAAAAMAAIAAAAAAAQAAAAMAAMAAAAAAAQAAAAMAAQAAAAAAAQAAAAMAAUAAAAAAAQAAAANAAIAAAAAAAQAAAANAAMAAAAAAAQAAAANAAQAAAAAAAQAAAANAAUAAAAAAAQAAAAOAAIAAAAAAAQAAAAOAAMAAAAAAAQAAAAOAAQAAAAAAAQAAAAOAAUAAAAAAAQAAAAPAAIAAAAAAAQAAAAPAAMAAAAAAAQAAAAPAAQAAAAAAAQAAAAPAAUAAAAAAAQAAAAQAAIAAAAAAAQAAAAQAAMAAAAAAAQAAAAQAAQAAAAAAAQAAAAQAAUAAAAAAAQAAAARAAIAAAAAAAQAAAARAAMAAAAAAAQAAAARAAQAAAAAAAQAAAARAAUAAAAAAAQAAAASAAIAAAAAAAQAAAASAAMAAAAAAAQAAAASAAQAAAAAAAQAAAASAAUAAAAAAAQAAAATAAIAAAAAAAQAAAATAAMAAAAAAAQAAAATAAQAAAAAAAQAAAATAAUAAAAAAAQAAAAUAAIAAAAAAAQAAAAUAAMAAAAAAAQAAAAUAAQAAAAAAAQAAAAUAAUAAAAAAAQAAAAVAAIAAAAAAAQAAAAVAAMAAAAAAAQAAAAVAAQAAAAAAAQAAAAVAAUAAAAAAAQAAAAWAAIAAAAAAAQAAAAWAAMAAAAAAAQAAAAWAAQAAAAAAAQAAAAWAAUAAAAAAAQAAAAXAAIAAAAAAAQAAAAXAAMAAAAAAAQAAAAXAAQAAAAAAAQAAAAXAAUAAAAAAAQAAAAYAAIAAAAAAAQAAAAYAAMAAAAAAAQAAAAYAAQAAAAAAAQAAAAYAAUAAAAAAAQAAAAZAAIAAAAAAAQAAAAZAAMAAAAAAAQAAAAZAAQAAAAAAAQAAAAZAAUAAAAAAAQAAAAaAAIAAAAAAAQAAAAaAAMAAAAAAAQAAAAaAAQAAAAAAAQAAAAaAAUAAAAAAAQAAAAbAAIAAAAAAAQAAAAbAAMAAAAAAAQAAAAbAAQAAAAAAAQAAAAbAAUAAAAAAAQAAAAcAAIAAAACAAQAAAAcAAMAAAACAAQAAAAcAAQAAAACAAQAAAAcAAUAAAACAAQAAAAdAAsAAAAMAAIAACAdAAwAAAAMAAEAAAAdAA0AAAAMAAEAAAAdAA4AAAAMAAEAAAA=")
tile_set = ExtResource("1_2jm27")

[node name="floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAgAAAAAAAkAAAABAAkAAAAAAAkAAAABAAoAAAAAAAkAAAABAAsAAAAAAAkAAAABAAwAAAAAAAkAAAABAA0AAAAAAAkAAAABAA4AAAAAAAkAAAABAA8AAAAAAAkAAAACAAgAAAAAAAkAAAACAAkAAAAAAAkAAAACAAoAAAAAAAkAAAACAAsAAAAAAAkAAAACAAwAAAAAAAkAAAACAA0AAAAAAAkAAAACAA4AAAAAAAkAAAACAA8AAAAAAAkAAAADAAgAAAAAAAkAAAADAAkAAAAAAAkAAAADAAoAAAAAAAkAAAADAAsAAAAAAAkAAAADAAwAAAAAAAkAAAADAA0AAAAAAAkAAAADAA4AAAAAAAkAAAADAA8AAAAAAAkAAAAEAAgAAAAAAAkAAAAEAAkAAAAAAAkAAAAEAAoAAAAAAAkAAAAEAAsAAAAAAAkAAAAEAAwAAAAAAAkAAAAEAA0AAAAAAAkAAAAEAA4AAAAAAAkAAAAEAA8AAAAAAAkAAAAFAAgAAAAAAAkAAAAFAAkAAAAAAAkAAAAFAAoAAAAAAAkAAAAFAAsAAAAAAAkAAAAFAAwAAAAAAAkAAAAFAA0AAAAAAAkAAAAFAA4AAAAAAAkAAAAFAA8AAAAAAAkAAAAGAAgAAAAAAAkAAAAGAAkAAAAAAAkAAAAGAAoAAAAAAAkAAAAGAAsAAAAAAAkAAAAGAAwAAAAAAAkAAAAGAA0AAAAAAAkAAAAGAA4AAAAAAAkAAAAGAA8AAAAAAAkAAAAHAAgAAAAAAAkAAAAHAAkAAAAAAAkAAAAHAAoAAAAAAAkAAAAHAAsAAAAAAAkAAAAHAAwAAAAAAAkAAAAHAA0AAAAAAAkAAAAHAA4AAAAAAAkAAAAHAA8AAAAAAAkAAAAIAAgAAAAAAAkAAAAIAAkAAAAAAAkAAAAIAAoAAAAAAAkAAAAIAAsAAAAAAAkAAAAIAAwAAAAAAAkAAAAIAA0AAAAAAAkAAAAIAA4AAAAAAAkAAAAIAA8AAAAAAAkAAAAJAAgAAAAAAAkAAAAJAAkAAAAAAAkAAAAJAAoAAAAAAAkAAAAJAAsAAAAAAAkAAAAJAAwAAAAAAAkAAAAJAA0AAAAAAAkAAAAJAA4AAAAAAAkAAAAJAA8AAAAAAAkAAAAKAAgAAAAAAAkAAAAKAAkAAAAAAAkAAAAKAAoAAAAAAAkAAAAKAAsAAAAAAAkAAAAKAAwAAAAAAAkAAAAKAA0AAAAAAAkAAAAKAA4AAAAAAAkAAAAKAA8AAAAAAAkAAAALAAgAAAAAAAkAAAALAAkAAAAAAAkAAAALAAoAAAAAAAkAAAALAAsAAAAAAAkAAAALAAwAAAAAAAkAAAALAA0AAAAAAAkAAAALAA4AAAAAAAkAAAALAA8AAAAAAAkAAAAMAAgAAAAAAAkAAAAMAAkAAAAAAAkAAAAMAAoAAAAAAAkAAAAMAAsAAAAAAAkAAAAMAAwAAAAAAAkAAAAMAA0AAAAAAAkAAAAMAA4AAAAAAAkAAAAMAA8AAAAAAAkAAAANAAgAAAAAAAkAAAANAAkAAAAAAAkAAAANAAoAAAAAAAkAAAANAAsAAAAAAAkAAAANAAwAAAAAAAkAAAANAA0AAAAAAAkAAAANAA4AAAAAAAkAAAANAA8AAAAAAAkAAAAOAAgAAAAAAAkAAAAOAAkAAAAAAAkAAAAOAAoAAAAAAAkAAAAOAAsAAAAAAAkAAAAOAAwAAAAAAAkAAAAOAA0AAAAAAAkAAAAOAA4AAAAAAAkAAAAOAA8AAAAAAAkAAAAPAAgAAAAAAAkAAAAPAAkAAAAAAAkAAAAPAAoAAAAAAAkAAAAPAAsAAAAAAAkAAAAPAAwAAAAAAAkAAAAPAA0AAAAAAAkAAAAPAA4AAAAAAAkAAAAPAA8AAAAAAAkAAAAQAAgAAAAAAAkAAAAQAAkAAAAAAAkAAAAQAAoAAAAAAAkAAAAQAAsAAAAAAAkAAAAQAAwAAAAAAAkAAAAQAA0AAAAAAAkAAAAQAA4AAAAAAAkAAAAQAA8AAAAAAAkAAAARAAgAAAAAAAkAAAARAAkAAAAAAAkAAAARAAoAAAAAAAkAAAARAAsAAAAAAAkAAAARAAwAAAAAAAkAAAARAA0AAAAAAAkAAAARAA4AAAAAAAkAAAARAA8AAAAAAAkAAAASAAgAAAAAAAkAAAASAAkAAAAAAAkAAAASAAoAAAAAAAkAAAASAAsAAAAAAAkAAAASAAwAAAAAAAkAAAASAA0AAAAAAAkAAAASAA4AAAAAAAkAAAASAA8AAAAAAAkAAAATAAgAAAAAAAkAAAATAAkAAAAAAAkAAAATAAoAAAAAAAkAAAATAAsAAAAAAAkAAAATAAwAAAAAAAkAAAATAA0AAAAAAAkAAAATAA4AAAAAAAkAAAATAA8AAAAAAAkAAAAUAAgAAAAAAAkAAAAUAAkAAAAAAAkAAAAUAAoAAAAAAAkAAAAUAAsAAAAAAAkAAAAUAAwAAAAAAAkAAAAUAA0AAAAAAAkAAAAUAA4AAAAAAAkAAAAUAA8AAAAAAAkAAAAVAAgAAAAAAAkAAAAVAAkAAAAAAAkAAAAVAAoAAAAAAAkAAAAVAAsAAAAAAAkAAAAVAAwAAAAAAAkAAAAVAA0AAAAAAAkAAAAVAA4AAAAAAAkAAAAVAA8AAAAAAAkAAAAWAAgAAAAAAAkAAAAWAAkAAAAAAAkAAAAWAAoAAAAAAAkAAAAWAAsAAAAAAAkAAAAWAAwAAAAAAAkAAAAWAA0AAAAAAAkAAAAWAA4AAAAAAAkAAAAWAA8AAAAAAAkAAAAXAAgAAAAAAAkAAAAXAAkAAAAAAAkAAAAXAAoAAAAAAAkAAAAXAAsAAAAAAAkAAAAXAAwAAAAAAAkAAAAXAA0AAAAAAAkAAAAXAA4AAAAAAAkAAAAXAA8AAAAAAAkAAAAYAAgAAAAAAAkAAAAYAAkAAAAAAAkAAAAYAAoAAAAAAAkAAAAYAAsAAAAAAAkAAAAYAAwAAAAAAAkAAAAYAA0AAAAAAAkAAAAYAA4AAAAAAAkAAAAYAA8AAAAAAAkAAAAZAAgAAAAAAAkAAAAZAAkAAAAAAAkAAAAZAAoAAAAAAAkAAAAZAAsAAAAAAAkAAAAZAAwAAAAAAAkAAAAZAA0AAAAAAAkAAAAZAA4AAAAAAAkAAAAZAA8AAAAAAAkAAAAaAAgAAAAAAAkAAAAaAAkAAAAAAAkAAAAaAAoAAAAAAAkAAAAaAAsAAAAAAAkAAAAaAAwAAAAAAAkAAAAaAA0AAAAAAAkAAAAaAA4AAAAAAAkAAAAaAA8AAAAAAAkAAAAbAAgAAAAAAAkAAAAbAAkAAAAAAAkAAAAbAAoAAAAAAAkAAAAbAAsAAAAAAAkAAAAbAAwAAAAAAAkAAAAbAA0AAAAAAAkAAAAbAA4AAAAAAAkAAAAbAA8AAAAAAAkAAAAcAAgAAAAAAAkAAAAcAAkAAAAAAAkAAAAcAAoAAAAAAAkAAAAcAAsAAAAAAAkAAAAcAAwAAAAAAAkAAAAcAA0AAAAAAAkAAAAcAA4AAAAAAAkAAAAcAA8AAAAAAAkAAAAdAAkAAAAdAAQAAAAdAAoAAAAdAAQAAAA=")
tile_set = ExtResource("1_2jm27")

[node name="Door1" type="AnimatedSprite2D" parent="."]
position = Vector2(98, 95)
sprite_frames = SubResource("SpriteFrames_jvqbq")
animation = &"open"
script = ExtResource("4_2rac8")

[node name="Door2" type="AnimatedSprite2D" parent="."]
position = Vector2(226, 95)
sprite_frames = SubResource("SpriteFrames_jvqbq")
animation = &"open"

[node name="Door3" type="AnimatedSprite2D" parent="."]
position = Vector2(354, 95)
sprite_frames = SubResource("SpriteFrames_jvqbq")
animation = &"open"
frame = 5
frame_progress = 1.0
